<resources>
    <string name="app_name">Go Home Safe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main6">Main6Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="todo">TODO</string>
    <string name="go_home_safe">Go Home Safe</string>
    <string name="enter_end_location">Enter End location</string>
    <string name="enter_start_location">Enter start location</string>
    <string name="go">GO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_email_id">enter email id</string>
    <string name="cancel">CANCEL</string>
    <string name="create_password">create password</string>
    <string name="re_enter_password">Re-enter password</string>
</resources>
