<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main7Activity">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn3_sign_up"
        android:layout_width="133dp"
        android:layout_height="53dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="455dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/enter_email_id"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="128dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn3_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="133dp"
        android:layout_height="53dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="455dp" />
</android.support.constraint.ConstraintLayout>